Refactor header and try to add digest edit form

--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-	<head th:fragment="data(title)">
+	<head th:fragment="data(title,admin)">
 		<title th:text="${title}">Digest Service Title</title>
 		<meta charset="UTF-8"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="../static/icon/apple-touch-icon.png" th:href="@{/icon/apple-touch-icon.png}">
 		<link rel="icon" type="image/png" sizes="32x32" href="../static/icon/favicon-32x32.png" th:href="@{/icon/favicon-32x32.png}">
 		<link rel="icon" type="image/png" sizes="16x16" href="../static/icon/favicon-16x16.png" th:href="@{/icon/favicon-16x16.png}">
-		<link rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
+		<link th:if="${!admin}" rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
+		<link th:unless="${!admin}" rel="stylesheet" type="text/css" href="../static/style/admin.css" th:href="@{/style/admin.css}"/>
 	</head>
 </html>
