--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -25,6 +25,7 @@
 								<tr>
 									<th th:text="#{site.obey.content.id}" nowrap>ID</th>
 									<th th:text="#{site.obey.content.user}" nowrap>User</th>
+									<th th:text="#{site.obey.content.user.id}" nowrap>User ID</th>
 									<th th:text="#{site.obey.content.chat}" nowrap>Chat</th>
 									<th th:text="#{site.obey.content.date}" nowrap>Date</th>
 									<th th:text="#{site.obey.content.text}" nowrap>Text</th>
@@ -33,6 +34,7 @@
 								<tr th:each="post : ${digest}">
 									<td th:text="${post.id}">Id</td>
 									<td class="td-left" th:text="${post.username}">User</td>
+									<td th:text="${post.userId}">User ID</td>
 									<td th:text="${post.chat}">Chat</td>
 									<td th:text="${post.date}">Date</td>
 									<td class="td-left" th:text="${post.text}">Text</td>
