--- a/src/main/resources/static/style/admin.css
+++ b/src/main/resources/static/style/admin.css
@@ -64,7 +64,7 @@ table td, table th {
 .td-left {
 	text-align: left;
 }
-.digest-form {
+.post-form {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	margin-right: 5px;
