--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -47,6 +47,7 @@
 						<div th:replace="~{pager :: paginator(down)}">Pager</div>
 					</div>
 					<div th:if="${userList != null && !userList.isEmpty()}">
+						<div th:replace="~{member :: user-form}"></div>
 						<div class="data-table">
 							<table>
 								<tr>
