--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -26,8 +26,8 @@
 						<tr>
 							<td class="cell-avatar">
 								<p class="user-details">
-									<img th:if="${digest.avatar != null}" width="160" height="160" alt="Not Available" th:alt="#{site.content.avatar.general.alt}" src="../static/image/avatar.png" th:src="${digest.avatar}" th:title="${digest.username}"/>
-									<img th:unless="${digest.avatar != null}" width="160" height="160" alt="Default Avatar" th:alt="#{site.content.avatar.default.alt}" src="../static/image/avatar.png" th:src="@{/image/avatar.png}" th:title="${digest.username}"/>
+									<img th:if="${digest.avatar != null && !digest.avatar.isEmpty()}" width="160" height="160" alt="Not Available" th:alt="#{site.content.avatar.general.alt}" src="../static/image/avatar.png" th:src="${digest.avatar}" th:title="${digest.username}"/>
+									<img th:unless="${digest.avatar != null && !digest.avatar.isEmpty()}" width="160" height="160" alt="Default Avatar" th:alt="#{site.content.avatar.default.alt}" src="../static/image/avatar.png" th:src="@{/image/avatar.png}" th:title="${digest.username}"/>
 									<br/>
 									<br/>
 									<span th:text="${digest.group}">Some group</span>
