--- a/src/main/resources/templates/digest.html
+++ b/src/main/resources/templates/digest.html
@@ -8,7 +8,7 @@
 						<!--/*@thymesVar id="digestForm" type="ru.exlmoto.digest.site.form.DigestForm"*/-->
 						<div th:fragment="digest-form" class="post-form" th:with="update=${digestForm.update},add=#{site.obey.content.action.add},edit=#{site.obey.content.action.edit},addTitle=#{site.obey.digest.add},editTitle=#{site.obey.digest.edit}">
 							<h3 th:text="${update ? editTitle : addTitle}">Add Digest</h3>
-							<form action="#" th:action="@{/obey/edit}" th:object="${digestForm}" th:method="post">
+							<form th:action="@{/obey/edit}" th:object="${digestForm}" th:method="post">
 								<div class="form-block">
 									<label for="digest-field" th:text="#{site.obey.content.digest}">Digest</label>
 									<input id="digest-field" type="text" th:field="*{digest}" size="105" th:placeholder="#{site.obey.content.text}"/>
