--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,11 +5,11 @@
 			<div class="controls">
 			<!--/*@thymesVar id="find" type="ru.exlmoto.digest.site.form.SearchForm"
 			*/--><div th:fragment="search-form(side)" class="search-form"><!--/*
-				*/--><form action="#" th:action="@{/search}" th:object="${find}" method="get"><!--/*
-					*/--><label class="page-label" for="#search-field" th:for="${'#search-field-' + side}" th:text="#{site.search.find.label}">Search:</label><!--/*
-					*/--><input id="#search-field" th:id="${'#search-field-' + side}" type="text" th:field="*{text}" size="20" maxlength="100" placeholder="Search..." th:placeholder="#{site.search.find.placeholder}"/><!--/*
-					*/--><label class="page-label" for="#search-user" th:for="${'#search-user-' + side}" th:text="#{site.search.filter.label}">Filter:</label><!--/*
-					*/--><input id="#search-user" th:id="${'#search-user-' + side}" type="text" th:field="*{user}" size="20" maxlength="20" placeholder="User #..." th:placeholder="#{site.search.filter.placeholder}"/><!--/*
+				*/--><form th:action="@{/search}" th:object="${find}" method="get"><!--/*
+					*/--><label class="page-label" for="search-field" th:for="${'search-field-' + side}" th:text="#{site.search.find.label}">Search:</label><!--/*
+					*/--><input id="search-field" th:id="${'search-field-' + side}" type="text" th:field="*{text}" size="20" maxlength="100" placeholder="Search..." th:placeholder="#{site.search.find.placeholder}"/><!--/*
+					*/--><label class="page-label" for="search-user" th:for="${'search-user-' + side}" th:text="#{site.search.filter.label}">Filter:</label><!--/*
+					*/--><input id="search-user" th:id="${'search-user-' + side}" type="text" th:field="*{user}" size="20" maxlength="20" placeholder="User #..." th:placeholder="#{site.search.filter.placeholder}"/><!--/*
 					*/--><input class="button" type="submit" value="Find!" th:value="#{site.search.button}"/><!--/*
 				*/--></form><!--/*
 				*/--><form th:action="@{/}"><!--/*
