--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -35,7 +35,7 @@
 									<th th:text="#{site.obey.content.action}" nowrap>Action</th>
 								</tr>
 								<tr th:each="post : ${digestList}">
-									<td th:text="${post.id}">Id</td>
+									<td th:text="${post.id}">ID</td>
 									<td class="td-left" th:text="${post.username}">User</td>
 									<td th:text="${post.userId}">User ID</td>
 									<td th:text="${post.chat}">Chat</td>
@@ -64,7 +64,7 @@
 								</tr>
 								<tr th:each="user : ${userList}">
 									<td class="td-left" th:text="${user.username}">Username</td>
-									<td th:text="${user.id}">Id</td>
+									<td th:text="${user.id}">ID</td>
 									<td class="td-left" th:utext="${user.avatar}">Avatar</td>
 									<td>
 										<a th:href="@{/obey/user/(edit=${user.id})}" th:text="#{site.obey.content.action.edit}">Edit</a> | <a th:href="@{/obey/user/delete/{id}(id=${user.id})}" th:text="#{site.obey.content.action.delete}">Delete</a>
@@ -94,6 +94,9 @@
 								</p>
 							</form>
 						</div>
+					</div>
+					<div th:if="${chatList != null}">
+						<div th:replace="~{subscriber :: subscriber-form(#{site.obey.subscribe},'sub-digest')}"></div>
 					</div>
 				</div>
 			</div>
