--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -94,9 +94,19 @@
 								</p>
 							</form>
 						</div>
+						<div class="spring"></div>
 					</div>
-					<div th:if="${chatList != null}">
+					<div th:if="${sub_digest != null}">
 						<div th:replace="~{subscriber :: subscriber-form(#{site.obey.subscribe},'sub-digest')}"></div>
+					</div>
+					<div th:if="${sub_motofan != null}">
+						<div th:replace="~{subscriber :: subscriber-form(#{site.obey.subscribe},'sub-motofan')}"></div>
+					</div>
+					<div th:if="${sub_greeting != null}">
+						<div th:replace="~{subscriber :: subscriber-form(#{site.obey.subscribe},'sub-greeting')}"></div>
+					</div>
+					<div th:if="${sub_covid != null}">
+						<div th:replace="~{subscriber :: subscriber-form(#{site.obey.subscribe},'sub-covid')}"></div>
 					</div>
 				</div>
 			</div>
