--- a/src/main/resources/templates/subscriber.html
+++ b/src/main/resources/templates/subscriber.html
@@ -19,7 +19,7 @@
 								</form>
 							</div>
 							<div class="data-table">
-								<table class="subscriber-table">
+								<table class="small-table">
 									<tr>
 										<th th:text="#{site.obey.content.chat.id}" nowrap>Chat ID</th>
 										<th th:if="${subscriberForm.showName}" th:text="#{site.obey.content.chat.name}" nowrap>Chat Name</th>
