Add update exchange link

--- a/src/main/resources/templates/exchange.html
+++ b/src/main/resources/templates/exchange.html
@@ -119,6 +119,9 @@
 									</p>
 								</form>
 							</div>
+							<p>
+								<a href="/obey/exchange/update" th:text="#{site.obey.exchange.update}">Update Exchange Rates</a>
+							</p>
 							<div class="spring"></div>
 						</div>
 					</div>
