Add Motofan Posts link

--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -5,7 +5,7 @@
 		<div class="page">
 			<div class="main">
 				<div class="frame">
-					<h3 th:text="#{site.obey.frame.title}">Tables</h3>
+					<h3 th:text="#{site.obey.frame.tables}">Tables</h3>
 					<p><a href="/obey">Digest</a></p>
 					<p><a href="/obey/user">Digest User</a></p>
 					<p><a href="/obey/setup">Digest Setup</a></p>
@@ -14,6 +14,8 @@
 					<p><a href="/obey/sub-greeting">Digest Sub Greeting</a></p>
 					<p><a href="/obey/sub-covid">Digest Sub Covid</a></p>
 					<p><a href="/obey/exchange">Exchange Rate</a></p>
+					<h3 th:text="#{site.obey.frame.links}">Links</h3>
+					<p><a href="/obey/motofan/update" th:text="#{site.obey.frame.link.motofan}">MotoFan.Ru Posts</a></p>
 				</div>
 				<div class="content">
 					<h3 th:text="#{site.obey.content.data}">Data</h3>
