--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -16,6 +16,7 @@
 					<p><a href="/obey/exchange">Exchange Rate</a></p>
 					<h3 th:text="#{site.obey.frame.links}">Links</h3>
 					<p><a href="/obey/send" th:text="#{site.obey.send.title}">Send to chat</a></p>
+					<p><a href="/logout" th:text="#{site.obey.frame.link.logout}">Logout</a></p>
 				</div>
 				<div class="content">
 					<h3 th:text="#{site.obey.content.data}">Data</h3>
