--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-	<head th:fragment="data(title,admin)">
+	<head th:fragment="data(title,page)">
 		<title th:text="${title}">Digest Service Title</title>
 		<meta charset="UTF-8"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="../static/icon/apple-touch-icon.png" th:href="@{/icon/apple-touch-icon.png}">
 		<link rel="icon" type="image/png" sizes="32x32" href="../static/icon/favicon-32x32.png" th:href="@{/icon/favicon-32x32.png}">
 		<link rel="icon" type="image/png" sizes="16x16" href="../static/icon/favicon-16x16.png" th:href="@{/icon/favicon-16x16.png}">
-		<link th:if="${!admin}" rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
-		<link th:unless="${!admin}" rel="stylesheet" type="text/css" href="../static/style/admin.css" th:href="@{/style/admin.css}"/>
+		<link th:if="${#strings.equals(page, 'home')}" rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
+		<link th:if="${#strings.equals(page, 'admin')}" rel="stylesheet" type="text/css" href="../static/style/admin.css" th:href="@{/style/admin.css}"/>
+		<link th:if="${#strings.equals(page, 'login')}" rel="stylesheet" type="text/css" href="../static/style/login.css" th:href="@{/style/login.css}"/>
 	</head>
 </html>
