--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -119,26 +119,33 @@
 					<div th:if="${send != null}">
 						<div th:replace="~{send :: send-form}"></div>
 					</div>
-					<div th:if="${memberList != null}">
-						<div th:replace="~{participant :: member-form}"></div>
-						<table class="small-table">
-							<tr>
-								<th th:text="#{site.obey.content.id}" nowrap>ID</th>
-								<th th:text="#{site.obey.content.username}" nowrap>Username</th>
-								<th th:text="#{site.obey.content.role}" nowrap>Role</th>
-								<th th:text="#{site.obey.content.enabled}" nowrap>Enabled</th>
-								<th th:text="#{site.obey.content.action}" nowrap>Action</th>
-							</tr>
-							<tr th:each="member : ${memberList}">
-								<td th:text="${member.id}">ID</td>
-								<td class="td-left" th:text="${member.username}">Username</td>
-								<td class="td-left" th:utext="${member.role}">Role</td>
-								<td th:utext="${member.enabled}">Enabled</td>
-								<td>
-									<a th:href="@{/obey/member/(edit=${member.id})}" th:text="#{site.obey.content.action.edit}">Edit</a> | <a th:href="@{/obey/member/delete/{id}(id=${member.id})}" th:text="#{site.obey.content.action.delete}">Delete</a>
-								</td>
-							</tr>
-						</table>
+					<div>
+						<div th:if="${owner}">
+							<div th:if="${memberList != null}">
+								<div th:replace="~{participant :: member-form}"></div>
+								<table class="small-table">
+									<tr>
+										<th th:text="#{site.obey.content.id}" nowrap>ID</th>
+										<th th:text="#{site.obey.content.username}" nowrap>Username</th>
+										<th th:text="#{site.obey.content.role}" nowrap>Role</th>
+										<th th:text="#{site.obey.content.enabled}" nowrap>Enabled</th>
+										<th th:text="#{site.obey.content.action}" nowrap>Action</th>
+									</tr>
+									<tr th:each="member : ${memberList}">
+										<td th:text="${member.id}">ID</td>
+										<td class="td-left" th:text="${member.username}">Username</td>
+										<td class="td-left" th:utext="${member.role}">Role</td>
+										<td th:utext="${member.enabled}">Enabled</td>
+										<td>
+											<a th:href="@{/obey/member/(edit=${member.id})}" th:text="#{site.obey.content.action.edit}">Edit</a> | <a th:href="@{/obey/member/delete/{id}(id=${member.id})}" th:text="#{site.obey.content.action.delete}">Delete</a>
+										</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+						<div th:unless="${owner}">
+							<h4 th:text="#{site.obey.member.access.denied}">Access Denied!</h4>
+						</div>
 						<div class="spring"></div>
 					</div>
 				</div>
