Start to fill help manual

--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -297,6 +297,12 @@ input, textarea, select {
 	background: #FFF9EC;
 	padding: 5px;
 }
+.help-title {
+	color: chocolate;
+}
+.help-command {
+	color: #0088CC;
+}
 
 /* Footer */
 .copyright {
